Comments unit tested. #9

--- a/comments.html
+++ b/comments.html
@@ -9,7 +9,7 @@
   <div id="linkHeader"></div>
   <div id="linkDetails"></div>
   <div class="container">
-    <div id="loading" style="display: none" data-bb-type="activity-indicator" data-bb-size="large"></div>
+    <div id="loading" data-bb-type="activity-indicator" data-bb-size="large"></div>
     <div id="comments"></div>
   </div>
   <div data-bb-type="action-bar" data-bb-back-caption="Back">
