--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -14,9 +14,11 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../js/snooby.js"></script>
+  <script type="text/javascript" src="../js/app.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SnoobySpec.js"></script>
+  <script type="text/javascript" src="spec/AppSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
