--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -9,16 +9,19 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/sinon-1.5.2.js"></script>
+  <script type="text/javascript" src="lib/responses.js"></script>
   <script type="text/javascript" src="../js/jquery.min.js"></script>
   <script type="text/javascript" src="../js/cache.js"></script>
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../js/snooby.js"></script>
   <script type="text/javascript" src="../js/app.js"></script>
+  <script type="text/javascript" src="../js/settings.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SnoobySpec.js"></script>
   <script type="text/javascript" src="spec/AppSpec.js"></script>
+  <script type="text/javascript" src="spec/SettingsSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
