--- a/comments.html
+++ b/comments.html
@@ -28,6 +28,23 @@
       </div>
     </div>
   </script>
+  <script id="selfPostHeaderTemplate" type="text/template">
+    <div class="container">
+      <div class="row link-title">
+        <div class="span12">
+          {{&title}}
+        </div>
+      </div>
+      <div class="row link-body">
+        <div class="span12">
+          {{&body}}
+        </div>
+      </div>
+      <div class="row link-details">
+        <div class="span12">{{domain}} • {{numComments}} comments</div>
+      </div>
+    </div>
+  </script>
 
     <script id="linkHeaderDetailsTemplate" type="text/template">
       <div class="container">
