--- a/subreddit.html
+++ b/subreddit.html
@@ -11,46 +11,49 @@
     <div data-bb-type="action" 
          onclick="document.getElementById('actionBar').setSelectedTab(document.getElementById('tab-' + _cache.getItem('subreddit.selected')))" 
          data-bb-style="button" data-bb-img="img/icons/ic_rotate.png">Refresh</div>
-    <div data-bb-type="action" onclick="bb.pushScreen('settings.html', 'settings');" data-bb-style="button" data-bb-img="img/icons/ic_settings.png">Settings</div>
+   <div data-bb-type="action"
+        onclick="bb.pushScreen('settings.html', 'settings');"
+        data-bb-style="button"
+        data-bb-img="img/icons/ic_settings.png">Settings</div>
     <!-- <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_search.png">Search</div> -->
-  </div>
-  <script id="linkTemplate" type="text/template">
-    <div class="link-section">
-      <div class="container-fluid">
-        <div class="row">
-          {{&linkDescription}}
-        </div>
-      </div>  
-    </div>
-    <div class="details-section">
-      <div class="container">
-        <div class="row">
-          <div class="span10 meta">
-            <span class="subreddit">{{subreddit}}</span> • {{score}} • {{domain}} • {{author}}
-          </div>
-          <div class="span2 time">{{time}}</div>
-        </div>
-      </div>  
-    </div>
-  </script>
-  <script id="titleWithThumbnail" type="text/template">
-    <div class="span2 thumb">
-      <img src="{{thumbnail}}" />
-    </div>
-    <div class="span8 link-title">
-      {{&title}}
-    </div>
-    <div class="span2 comments">
-      <div class="comment-count">{{numComments}}</div>
-      <i class='icon-comment'></i>
-    </div>
-  </script>
-  <script id="titleWithoutThumbnail" type="text/template">
-    <div class="span10 link-title">
-      {{&title}}
-    </div>
-    <div class="span2 comments">
-      <div class="comment-count">{{numComments}}</div>
-      <i class='icon-comment'></i>
-    </div>
-  </script>
+   <script id="linkTemplate" type="text/template">
+     <div class="link-section">
+       <div class="container-fluid">
+         <div class="row">
+           {{&linkDescription}}
+         </div>
+       </div>  
+     </div>
+     <div class="details-section">
+       <div class="container">
+         <div class="row">
+           <div class="span10 meta">
+             <span class="subreddit">{{subreddit}}</span> • {{score}} • {{domain}} • {{author}}
+           </div>
+           <div class="span2 time">{{time}}</div>
+         </div>
+       </div>  
+     </div>
+   </script>
+   <script id="titleWithThumbnail" type="text/template">
+     <div class="span2 thumb">
+       <img src="{{thumbnail}}" />
+     </div>
+     <div class="span8 link-title">
+       {{&title}}
+     </div>
+     <div class="span2 comments">
+       <div class="comment-count">{{numComments}}</div>
+       <i class='icon-comment'></i>
+     </div>
+   </script>
+   <script id="titleWithoutThumbnail" type="text/template">
+     <div class="span10 link-title">
+       {{&title}}
+     </div>
+     <div class="span2 comments">
+       <div class="comment-count">{{numComments}}</div>
+       <i class='icon-comment'></i>
+     </div>
+   </script>
+</div>
