Snooby Gold moved to action overflow. Fixes #7.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 _subreddits.onDomReady(element, params);
               else if (id == 'comments')
                 _comments.onDomReady(element, params);
-              else if (id === 'settings')
-                _settings.onDomReady(element, params);
+              else if (id === 'support')
+                _support.onDomReady(element, params);
             }, 
             onscreenready: function(element, id, params) {
               if (id === 'subreddit')
