--- a/subreddit.html
+++ b/subreddit.html
@@ -15,7 +15,11 @@
         onclick="bb.pushScreen('settings.html', 'settings');"
         data-bb-style="button"
         data-bb-img="img/icons/ic_settings.png">Settings</div>
-    <!-- <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_search.png">Search</div> -->
+   <div data-bb-type="action"
+        onclick="bb.pushScreen('support.html', 'support');"
+        data-bb-style="button"
+        data-bb-overflow="true"
+        data-bb-img="img/icons/ic_star.png">Snooby Gold</div>
    <script id="linkTemplate" type="text/template">
      <div class="link-section">
        <div class="container-fluid">
