--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -17,11 +17,13 @@
   <script type="text/javascript" src="../js/snooby.js"></script>
   <script type="text/javascript" src="../js/app.js"></script>
   <script type="text/javascript" src="../js/settings.js"></script>
+  <script type="text/javascript" src="../js/support.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SnoobySpec.js"></script>
   <script type="text/javascript" src="spec/AppSpec.js"></script>
   <script type="text/javascript" src="spec/SettingsSpec.js"></script>
+  <script type="text/javascript" src="spec/SupportSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
