About section. Closes #16

--- a/subreddit.html
+++ b/subreddit.html
@@ -20,6 +20,11 @@
         data-bb-style="button"
         data-bb-overflow="true"
         data-bb-img="img/icons/ic_star.png">Snooby Gold</div>
+   <div data-bb-type="action"
+        onclick="bb.pushScreen('about.html', 'about');"
+        data-bb-style="button"
+        data-bb-overflow="true"
+        data-bb-img="img/icons/ic_star.png">About</div>
    <script id="linkTemplate" type="text/template">
      <div class="link-section">
        <div class="container-fluid">
