--- a/subreddit.html
+++ b/subreddit.html
@@ -1,4 +1,4 @@
-<div id="subreddit" data-bb-type="screen">
+<div id="subreddit" data-bb-type="screen" data-bb-effect="fade">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/bbui-min.css"></link>
