Final touches for 1.0.2

--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@
         but it wouldn't have been possible without the following contributions:
       </p>
       <ul>
+        <li>Snooby icon by YOOtheme<br/><span class="link">http://icons.yootheme.com</span></li>
         <li>Font Awesome by Dave Gandy<br/><span class="link">http://fortawesome.github.com/Font-Awesome</span></li>
-        <li>Application Icon by YOOtheme<br/><span class="link">http://icons.yootheme.com</span></li>
-        <li>Action Bar icons by Myers Design Limited<br/><span class="link">http://myersdesign.com/resources</span></li>
-        <li>Markdown Parsing by gamefreak<br/><span class="link">https://github.com/gamefreak/snuownd</span></li>
+        <li>Action bar icons by Myers Design Limited<br/><span class="link">http://myersdesign.com/resources</span></li>
+        <li>Markdown parsing by gamefreak<br/><span class="link">https://github.com/gamefreak/snuownd</span></li>
       </ul>
       </p>Thank you!</p>
     </div>
