--- a/subreddit.html
+++ b/subreddit.html
@@ -24,7 +24,7 @@
         onclick="bb.pushScreen('about.html', 'about');"
         data-bb-style="button"
         data-bb-overflow="true"
-        data-bb-img="img/icons/ic_star.png">About</div>
+        data-bb-img="img/icons/ic_info.png">About</div>
    <script id="linkTemplate" type="text/template">
      <div class="link-section">
        <div class="container-fluid">
