separate comments into chunks. #23

--- a/comments.html
+++ b/comments.html
@@ -1,4 +1,4 @@
-<div data-bb-type="screen">
+<div data-bb-type="screen"> <!-- onscroll="_comments.onScroll(this)"> -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/bbui-min.css"></link>
@@ -15,6 +15,7 @@
   <div data-bb-type="action-bar" data-bb-back-caption="Back">
     <!-- <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_up.png">Downvote</div>
     <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_down.png">Upvote</div> -->
+    <div data-bb-type="action" data-bb-style="button" data-bb-img="img/icons/ic_next.png">More</div>
   </div>
   <script id="linkHeaderTemplate" type="text/template">
     <div class="container">
