Pull to load subreddit posts. closes #28

--- a/subreddit.html
+++ b/subreddit.html
@@ -1,4 +1,4 @@
-<div id="subreddit" data-bb-type="screen" data-bb-effect="fade">
+<div id="subreddit" data-bb-type="screen" data-bb-effect="fade" onscroll="_subreddits.onScroll(this)">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/bbui-min.css"></link>
@@ -6,7 +6,13 @@
   <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
   <script type="text/javascript" src="js/subreddit.js" onunload="_subreddits.onUnload()"></script>
   <div id="loading" style="display: none;" data-bb-type="activity-indicator" data-bb-size="large"></div>
-  <div id="listing" style="display: none;"></div>
+  <div id="listing" style="display: none;">
+    <div id="inner">
+    </div>
+  </div>
+  <div id="pull-to-refresh" style="display: none">
+    <div id="ptrarrow">&#x21ea;</div><span id="ptrtext"></span>
+  </div>
   <div id="actionBar" data-bb-type="action-bar">
     <div data-bb-type="action" 
          onclick="_subreddits.refresh()" 
