--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Alien Black</title>
+    <title>Snooby</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1.0" />
     <script type="text/javascript" src="local:///chrome/webworks.js"></script>
