--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -18,12 +18,15 @@
   <script type="text/javascript" src="../js/app.js"></script>
   <script type="text/javascript" src="../js/settings.js"></script>
   <script type="text/javascript" src="../js/support.js"></script>
+  <script type="text/javascript" src="../js/bbui-min.js"></script>
+  <script type="text/javascript" src="../js/bbui-reddit.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SnoobySpec.js"></script>
   <script type="text/javascript" src="spec/AppSpec.js"></script>
   <script type="text/javascript" src="spec/SettingsSpec.js"></script>
   <script type="text/javascript" src="spec/SupportSpec.js"></script>
+  <script type="text/javascript" src="spec/BbuiRedditSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
