Handles reddit comment links natively. #18

--- a/comments.html
+++ b/comments.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
   <script type="text/javascript" src="js/snuownd.js"></script>
   <script type="text/javascript" src="js/comments.js"></script>
-  <div id="linkHeader"></div>
-  <div id="linkDetails"></div>
+  <div id="linkHeader" style="display: none"></div>
+  <div id="linkDetails" style="display: none"></div>
   <div class="container">
     <div id="loading" data-bb-type="activity-indicator" data-bb-size="large"></div>
     <div id="comments">
