--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -17,6 +17,7 @@
   <script type="text/javascript" src="../js/snooby.js"></script>
   <script type="text/javascript" src="../js/app.js"></script>
   <script type="text/javascript" src="../js/settings.js"></script>
+  <script type="text/javascript" src="../js/comments.js"></script>
   <script type="text/javascript" src="../js/support.js"></script>
   <script type="text/javascript" src="../js/bbui-min.js"></script>
   <script type="text/javascript" src="../js/bbui-reddit.js"></script>
@@ -27,6 +28,7 @@
   <script type="text/javascript" src="spec/SettingsSpec.js"></script>
   <script type="text/javascript" src="spec/SupportSpec.js"></script>
   <script type="text/javascript" src="spec/BbuiRedditSpec.js"></script>
+  <script type="text/javascript" src="spec/CommentsSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
