--- a/support.html
+++ b/support.html
@@ -22,6 +22,11 @@
         <i class="icon-trophy"></i> I want Snooby Gold!
       </div>
     </div>
+    <div data-bb-type="label-control-horizontal-row">
+      <div id="restoreSnoobyGoldButton" data-bb-type="button" onclick="_support.restoreSnoobyGold()">
+        <i class="icon-trophy"></i> Restore my Snooby Gold
+      </div>
+    </div>
   </div>
   <div class="separator">
     <i class="icon-star"></i> 
