--- a/subreddit.html
+++ b/subreddit.html
@@ -54,6 +54,9 @@
            <span class="score {{scoreClass}}" id="score-{{name}}">{{score}}</span> • 
            {{domain}} • 
            {{author}}
+           {{#authorFlair}}
+             • {{authorFlair}}
+           {{/authorFlair}}
          </div>
          <div class="span2 time">{{time}}</div>
        </div>
