--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -21,6 +21,8 @@
   <script type="text/javascript" src="../js/support.js"></script>
   <script type="text/javascript" src="../js/bbui-min.js"></script>
   <script type="text/javascript" src="../js/bbui-reddit.js"></script>
+  <script type="text/javascript" src="../js/rateLimiter.js"></script>
+  <script type="text/javascript" src="../js/moment.min.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SnoobySpec.js"></script>
@@ -29,6 +31,7 @@
   <script type="text/javascript" src="spec/SupportSpec.js"></script>
   <script type="text/javascript" src="spec/BbuiRedditSpec.js"></script>
   <script type="text/javascript" src="spec/CommentsSpec.js"></script>
+  <script type="text/javascript" src="spec/RateLimiterSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
