--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/mustache.js"></script>
     <script type="text/javascript" src="js/moment.min.js"></script>
     <script type="text/javascript" src="js/cache.js"></script>
+    <script type="text/javascript" src="js/rateLimiter.js"></script>
     <script type="text/javascript" src="js/bbui-reddit.js"></script>
     <script type="text/javascript" src="js/snooby.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
