--- a/comments.html
+++ b/comments.html
@@ -39,12 +39,12 @@
           {{&title}}
         </div>
       </div>
-      <div class="row link-body">
+      <div class="row-fluid link-body">
         <div class="span12">
           {{&body}}
         </div>
       </div>
-      <div class="row link-details">
+      <div class="row-fluid link-details">
         <div class="span12">{{domain}} • {{numComments}} comments</div>
       </div>
     </div>
