--- a/index.html
+++ b/index.html
@@ -59,8 +59,19 @@
         var version = _cache.getPersistedItem('snooby.version');
         if (version === null || version !== '1.0.4') {
           _cache.removePersistedItem('snooby.subreddits.actionBar');
-          _cache.persistItem('snooby.gold', 'false');
-          _cache.persistItem('snooby.version', '1.0.4');
+          var gold = _cache.getPersistedItem('snooby.gold');
+          if (typeof gold === 'undefined')
+            _cache.persistItem('snooby.gold', 'false');
+        }
+
+        if (version === null || version !== '1.0.6') {
+          _cache.persistItem('snooby.version', '1.0.6');
+          var persistedUser = _cache.getPersistedItem('snooby.user');
+          if (typeof persistedUser !== 'undefined' && persistedUser !== null) {
+            var user = JSON.parse(persistedUser);
+            _cache.persistItem('snooby.user', JSON.stringify({ username: user.username, 
+                                                               modhash: user.modhash }));
+          }
         }
 
         if (_cache.getPersistedItem('snooby.subreddits.actionBar') === null) {
