Comment window and context menu item. #37

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                 _comments.onDomReady(element, params);
               else if (id === 'support')
                 _support.onDomReady(element, params);
+              else if (id === 'comment')
+                _comment.onDomReady(element, params);
             }, 
             onscreenready: function(element, id, params) {
               if (id === 'subreddit')
