Comment from subreddit page. #38

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                 _settings.onScreenReady(element, params);
               else if (id == 'comments')
                 _comments.onScreenReady(element, params);
+              else if (id == 'comment')
+                _comment.onScreenReady(element, params);
             }
           });
 
