--- a/subreddit.html
+++ b/subreddit.html
@@ -70,7 +70,7 @@
      {{&title}}
    </div>
    <div class="span2 comments">
-     <div class="comment-count">{{numComments}}</div>
+     <div id="commentCount" class="comment-count">{{numComments}}</div>
      <i class='icon-comment'></i>
    </div>
  </script>
@@ -79,7 +79,7 @@
      {{&title}}
    </div>
    <div class="span2 comments">
-     <div class="comment-count">{{numComments}}</div>
+     <div id="commentCount" class="comment-count">{{numComments}}</div>
      <i class='icon-comment'></i>
    </div>
  </script>
