--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -23,6 +23,8 @@
   <script type="text/javascript" src="../js/bbui-reddit.js"></script>
   <script type="text/javascript" src="../js/rateLimiter.js"></script>
   <script type="text/javascript" src="../js/moment.min.js"></script>
+  <script type="text/javascript" src="../js/comment.js"></script>
+  <script type="text/javascript" src="../js/jquery.autosize.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SnoobySpec.js"></script>
@@ -32,6 +34,7 @@
   <script type="text/javascript" src="spec/BbuiRedditSpec.js"></script>
   <script type="text/javascript" src="spec/CommentsSpec.js"></script>
   <script type="text/javascript" src="spec/RateLimiterSpec.js"></script>
+  <script type="text/javascript" src="spec/CommentSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
