Updates num comments #37

--- a/comments.html
+++ b/comments.html
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="row-fluid link-details">
-        <div class="span12">{{domain}} • {{numComments}} comments</div>
+        <div class="span12">{{domain}} • <span id="numComments">{{numComments}}</span> comments</div>
       </div>
     </div>
   </script>
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div class="row-fluid link-details">
-        <div class="span12">{{domain}} • {{numComments}} comments</div>
+        <div class="span12">{{domain}} • <span id="numComments">{{numComments}}</span> comments</div>
       </div>
     </div>
   </script>
