Updates support page explaining rate limits. #63

--- a/support.html
+++ b/support.html
@@ -13,9 +13,13 @@
   <div id="supportSnooby" data-bb-type="round-panel" style="display: none">
     <div data-bb-type="panel-header">Supporting Snooby</div>
     <div>
-      Buying Snooby Gold gives you the full suite of Snooby features. Right now,
-      though, the only feature it provides is that good feeling you get knowing
-      you're helping a small-time developer fulfill his dream :) Thanks.
+      <p>Snooby Gold unlocks the full suite of features for Snooby. Non-Snooby Gold users are 
+      subjected to a 50 token rate limit and every action expires in 24 hours. Currently,</p>
+      <ul>
+        <li>Voting costs 1 token</li>
+        <li>Commenting costs 3 tokens</li>
+      </ul>
+      <p>Thanks again for downloading the app and for your continued support!</p>
     </div>
     <div data-bb-type="label-control-horizontal-row">
       <div id="snoobyGoldButton" data-bb-type="button" onclick="_support.purchaseSnoobyGold()">
