Initial commit of Mailbox. #67 Action Bar item is added and clicking on it will show your inbox. No formatting yet.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 _support.onDomReady(element, params);
               else if (id === 'comment')
                 _comment.onDomReady(element, params);
+              else if (id === 'mailbox')
+                _mailbox.onDomReady(element, params);
             }, 
             onscreenready: function(element, id, params) {
               if (id === 'subreddit')
@@ -50,6 +52,8 @@
                 _settings.onScreenReady(element, params);
               else if (id == 'comments')
                 _comments.onScreenReady(element, params);
+              else if (id == 'mailbox')
+                _mailbox.onScreenReady(element, params);
               else if (id == 'comment')
                 _comment.onScreenReady(element, params);
             }
