--- a/mailbox.html
+++ b/mailbox.html
@@ -3,7 +3,9 @@
   <link rel="stylesheet" type="text/css" href="css/bbui-min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
+  <script type="text/javascript" src="js/snuownd.js"></script>
   <script type="text/javascript" src="js/mailbox.js"></script>
+  <div data-bb-type="title" data-bb-caption="Mailbox" data-bb-back-caption="Back"></div>
   <div id="loading" style="display: none;" data-bb-type="activity-indicator" data-bb-size="large"></div>
   <div id="listing" style="display: none;">
     <div id="inner">
@@ -13,7 +15,23 @@
     <div id="ptrarrow">&#x21ea;</div><span id="ptrtext"></span>
   </div>
   <script id="messageTemplate" type="text/template">
-    {{time}} {{subject}} {{body}} {{author}}
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span12 subject">{{subject}}</div>
+      </div>
+      <div class="row-fluid">
+        <div class="span10 meta">
+          <span class="author">{{author}}</span> from <span class="subreddit">/r/{{subreddit}}</span> 
+        </div>
+        <div class="span2 time">{{time}}</div>
+      </div>
+      <div class="row-fluid">
+        <div class="span12 body">{{&body}}</div>
+      </div>
+      <div class="row-fluid">
+        <div class="span12 status"><i class="icon-envelope-alt"></i></div>
+      </div>
+    </div>  
   </script>
 </div>
 
