Context menu item to bring user to comments #77

--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -24,6 +24,7 @@
   <script type="text/javascript" src="../js/rateLimiter.js"></script>
   <script type="text/javascript" src="../js/moment.min.js"></script>
   <script type="text/javascript" src="../js/comment.js"></script>
+  <script type="text/javascript" src="../js/mailbox.js"></script>
   <script type="text/javascript" src="../js/jquery.autosize.js"></script>
 
   <!-- include spec files here... -->
@@ -35,6 +36,7 @@
   <script type="text/javascript" src="spec/CommentsSpec.js"></script>
   <script type="text/javascript" src="spec/RateLimiterSpec.js"></script>
   <script type="text/javascript" src="spec/CommentSpec.js"></script>
+  <script type="text/javascript" src="spec/MailboxSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
