Cache Mailbox state and use when available. #78

--- a/mailbox.html
+++ b/mailbox.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"></link>
   <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
   <script type="text/javascript" src="js/snuownd.js"></script>
-  <script type="text/javascript" src="js/mailbox.js"></script>
+  <script type="text/javascript" src="js/mailbox.js" onunload="_mailbox.onUnload()"></script>
   <div data-bb-type="title" data-bb-caption="Mailbox" data-bb-back-caption="Back"></div>
   <div id="loading" style="display: none;" data-bb-type="activity-indicator" data-bb-size="large"></div>
   <div id="listing" style="display: none;">
