Initial UI for subreddit listing sorting. #75

--- a/subreddit.html
+++ b/subreddit.html
@@ -5,6 +5,17 @@
   <link rel="stylesheet" type="text/css" href="css/styles.min.css"></link>
   <script type="text/javascript" src="js/subreddit.js" onunload="_subreddits.onUnload()"></script>
   <div id="loading" style="display: none;" data-bb-type="activity-indicator" data-bb-size="large"></div>
+  <div id="subredditSortPanel" style="display: none;" class="container-fluid">
+    <div class="row-fluid">
+      <div id="subredditSortingOptions" class="span12">
+        <span data-snooby-sort="hot" class="sort-option">Hot</span>
+        <span data-snooby-sort="new" class="sort-option">New</span>
+        <span data-snooby-sort="rising" class="sort-option">Rising</span>
+        <span data-snooby-sort="controversial" class="sort-option">Controversial</span>
+        <span data-snooby-sort="top" class="sort-option">Top</span>
+      </div>
+    </div>
+  </div>
   <div id="listing" style="display: none;">
     <div id="inner">
     </div>
