Handle empty results. #75

--- a/subreddit.html
+++ b/subreddit.html
@@ -16,6 +16,9 @@
       </div>
     </div>
   </div>
+  <div id="noResults" style="display: none;">
+    There doesn't seem to be anything here.
+  </div>
   <div id="listing" style="display: none;">
     <div id="inner">
     </div>
